<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_market"
                android:icon="@drawable/ic_baseline_shopping_cart_24"
                android:title="@string/menu_market"/>
        <item
                android:id="@+id/nav_shopping_cart"
                android:icon="@drawable/ic_baseline_shopping_basket_24"
                android:title="@string/menu_shopping_cart"/>
        <item
            android:id="@+id/nav_event_calendar"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_event_calendar"
        />
        <item
            android:id="@+id/nav_qr_code_reader"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            android:title="@string/menu_qr_code_reader"
        />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_feedback"
        />
    </group>
</menu>